--- a/history.txt
+++ b/history.txt
@@ -11,3 +11,7 @@
 2016-06-05 v1.0.3
     update:UndoにショートカットC-zを設定
     update:直線にPC版のみ対応（モバイル未対応）
+2016-06-05 v1.0.3.1
+    change:tweetボタンの位置
+2016-06-06 v1.0.4
+    update:Redo(C-y)    
