--- a/history.txt
+++ b/history.txt
@@ -20,3 +20,7 @@
     update:モバイル版Undo,Redo対応
     change:モバイル版スタンプ、テキストにプレビュー（タッチが終了時点で描画）
     change:描画方法をモバイルとPCと統一して整理
+2016-06-07 v1.0.6
+    update:モバイル版canvasスクロールに対応
+    bugfix:モバイル版全面canvasになりどうにもならなくなる問題に対策
+    issue :モバイル版canvasがスクロール可能ということがわかりにくい
